# dino

./: Makefile  Makefile.target
DinoRuntime/: .gitignore  dino.c  dino.h
DinoRuntime/libdino/: Makefile
DinoRuntime/libdino/bld/: Makefile
DinoRuntime/libdino/src/: dino.c
DinoRuntime/libdino/src/include/libdino/: dino.h
LLVM/: CMakeLists.txt
LLVM/DINO/: CMakeLists.txt  DINO.cpp  DINO.h  DINOComplexityAnalysis.cpp  DINOComplexityAnalysis.h  DINOTaskBoundaries.cpp  DINOTaskBoundaries.h  DINOTaskCost.cpp  DINOTaskCost.h  DINOTaskSplit.cpp  DINOTaskSplit.h  DINOVersioner.cpp  DINOVersioner.h
